syntax = "proto3";

import "google/protobuf/empty.proto";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayNumber (google.protobuf.Empty) returns (NumberReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message NumberReply{
	int32 number = 1;
}
